Fixed portfolio alignment

--- a/public/stylesheets/stylish-portfolio.css
+++ b/public/stylesheets/stylish-portfolio.css
@@ -27,6 +27,10 @@ body {
     padding-right: 2%
 }
 
+.col-lg-10 {
+    width: 100%
+}
+
 .text-vertical-center h1 {
     font-size: 4.5em;
     font-weight: 700;
